Make chrome.proxy.onProxyError extension API work under the Network Service.

This adds an optional "ProxyErrorClient" client to the NetworkContext which
receives notifications of errors in the PAC script, as well as notifications
of failed URL loads that may have been proxy related.

Bug: 876568,851609
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I645ef91875135fcc81a7bd113442a0b65c661e65
Reviewed-on: https://chromium-review.googlesource.com/1192123
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587812}
Former-commit-id: d576f34af2134e4205788845247d5d52063fee1f